--- a/ntust.html
+++ b/ntust.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NTUST圖書</title>
     <link rel="stylesheet" href="./style/reset.css" />
-    <link rel="stylesheet" href="./style/ntust.css1118" />
+    <link rel="stylesheet" href="./style/ntust.css?1118" />
   </head>
   <body>
     <div class="mask">
