--- a/ntust.html
+++ b/ntust.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="./style/ntust.css?1118" />
   </head>
   <body>
-    <!-- <div class="mask">
+    <div class="mask">
       <div class="modal">
         <h3>登入</h3>
         <label for="pwd">密碼</label><input id="pwd" type="password">
         <button id="signIn">ok</button>
       </div>
-    </div> -->
+    </div>
     <div class="container">
       <h2 class="title">台科大圖書請款明細</h2>
       <ul class="count_list">
