add sticky style not finish

--- a/gsaptrain.html
+++ b/gsaptrain.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/reset.css">
-    <link rel="stylesheet" href="./style/gsaptrain.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style/reset.css" />
+    <link rel="stylesheet" href="./style/gsaptrain.css" />
     <title>gsap train</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- 滑鼠 -->
     <div class="mouse" id="mouse"></div>
+    <!-- header -->
+    <header class="header">
+      <div class="header_container">
+        <a href="#">
+          <h1 class="logo">LOGO</h1>
+        </a>
+        <nav class="nav">
+          <ul class="nav_list">
+            <li class="nav_item">work</li>
+            <li class="nav_item">services</li>
+            <li class="nav_item">pricing</li>
+            <li class="nav_item">network</li>
+            <li class="nav_item">start a project</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- main -->
     <div class="container">
+      <div class="box">
         <div class="line" id="h_line"></div>
         <div class="line" id="v_line"></div>
         <div class="circle" id="circle1"></div>
@@ -18,10 +38,119 @@
         <div class="circle" id="circle3"></div>
         <div class="circle" id="circle4"></div>
         <div class="circle" id="circle5"></div>
+      </div>
+      <div class="blank">
+        <div class="blank_head">TEXT</div>
+        <div class="blank_body" id="arrow"></div>
+      </div>
+      <div class="box1">
+        <h2>ORIGINAL IN DIGITAL</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure
+          corporis voluptates alias dolor aliquam iste ipsum, consectetur
+          eligendi temporibus quos dolorem quidem enim placeat illum nam
+          inventore atque pariatur ut.
+        </p>
+      </div>
+      <div class="box2">
+        <div class="box2_head">
+          <h4>Vivaldis</h4>
+          <p>art direction, UX/UI design, visual design</p>
+          <button>case study</button>
+        </div>
+        <div class="box2_body">
+          <div class="box2_text">
+            <span>©2019—2022</span>
+            <p>
+              What started as a simple app that matched students with companies,
+              quickly grew to become a leading digital recruitment tool. Appart
+              helped design and launch the brand and has been their go-to
+              product and design partner since launch.
+            </p>
+          </div>
+          <div class="box2_img">
+            <img src="https://fakeimg.pl/700x600/999/456/?text=IMG" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="box2">
+        <div class="box2_head">
+          <h4>Vivaldis</h4>
+          <p>art direction, UX/UI design, visual design</p>
+          <button>case study</button>
+        </div>
+        <div class="box2_body">
+          <div class="box2_text">
+            <span>©2019—2022</span>
+            <p>
+              What started as a simple app that matched students with companies,
+              quickly grew to become a leading digital recruitment tool. Appart
+              helped design and launch the brand and has been their go-to
+              product and design partner since launch.
+            </p>
+          </div>
+          <div class="box2_img">
+            <img src="https://fakeimg.pl/700x600/999/456/?text=IMG" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="box2">
+        <div class="box2_head">
+          <h4>Vivaldis</h4>
+          <p>art direction, UX/UI design, visual design</p>
+          <button>case study</button>
+        </div>
+        <div class="box2_body">
+          <div class="box2_text">
+            <span>©2019—2022</span>
+            <p>
+              What started as a simple app that matched students with companies,
+              quickly grew to become a leading digital recruitment tool. Appart
+              helped design and launch the brand and has been their go-to
+              product and design partner since launch.
+            </p>
+          </div>
+          <div class="box2_img">
+            <img src="https://fakeimg.pl/700x600/999/456/?text=IMG" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="box2">
+        <div class="box2_head">
+          <h4>Vivaldis</h4>
+          <p>art direction, UX/UI design, visual design</p>
+          <button>case study</button>
+        </div>
+        <div class="box2_body">
+          <div class="box2_text">
+            <span>©2019—2022</span>
+            <p>
+              What started as a simple app that matched students with companies,
+              quickly grew to become a leading digital recruitment tool. Appart
+              helped design and launch the brand and has been their go-to
+              product and design partner since launch.
+            </p>
+          </div>
+          <div class="box2_img">
+            <img src="https://fakeimg.pl/700x600/999/456/?text=IMG" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="box3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+        exercitationem ea animi praesentium excepturi quo atque eius officia
+        inventore numquam autem doloremque, laborum nobis soluta optio iusto
+        repellat ratione quia?
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
+      integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="./js/gsaptrain.js"></script>
-</body>
+  </body>
 </html>
