modify gsaptrain style

--- a/gsaptrain.html
+++ b/gsaptrain.html
@@ -56,7 +56,9 @@
         <div class="box2_head">
           <h4>Vivaldis</h4>
           <p>art direction, UX/UI design, visual design</p>
-          <button>case study</button>
+          <div class="btn_inner">
+            <button>case study</button>
+          </div>
         </div>
         <div class="box2_body">
           <div class="box2_text">
@@ -77,7 +79,9 @@
         <div class="box2_head">
           <h4>Vivaldis</h4>
           <p>art direction, UX/UI design, visual design</p>
-          <button>case study</button>
+          <div class="btn_inner">
+            <button>case study</button>
+          </div>
         </div>
         <div class="box2_body">
           <div class="box2_text">
@@ -98,7 +102,9 @@
         <div class="box2_head">
           <h4>Vivaldis</h4>
           <p>art direction, UX/UI design, visual design</p>
-          <button>case study</button>
+          <div class="btn_inner">
+            <button>case study</button>
+          </div>
         </div>
         <div class="box2_body">
           <div class="box2_text">
@@ -119,7 +125,9 @@
         <div class="box2_head">
           <h4>Vivaldis</h4>
           <p>art direction, UX/UI design, visual design</p>
-          <button>case study</button>
+          <div class="btn_inner">
+            <button>case study</button>
+          </div>
         </div>
         <div class="box2_body">
           <div class="box2_text">
@@ -137,6 +145,12 @@
         </div>
       </div>
       <div class="box3">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+        exercitationem ea animi praesentium excepturi quo atque eius officia
+        inventore numquam autem doloremque, laborum nobis soluta optio iusto
+        repellat ratione quia?
+      </div>
+      <div class="box4">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
         exercitationem ea animi praesentium excepturi quo atque eius officia
         inventore numquam autem doloremque, laborum nobis soluta optio iusto
