modify gsaptrain style

--- a/gsaptrain.html
+++ b/gsaptrain.html
@@ -145,16 +145,14 @@
         </div>
       </div>
       <div class="box3">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-        exercitationem ea animi praesentium excepturi quo atque eius officia
-        inventore numquam autem doloremque, laborum nobis soluta optio iusto
-        repellat ratione quia?
+        <p>
+          BOX3
+        </p>
       </div>
       <div class="box4">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-        exercitationem ea animi praesentium excepturi quo atque eius officia
-        inventore numquam autem doloremque, laborum nobis soluta optio iusto
-        repellat ratione quia?
+        <p>
+          BOX4
+        </p>
       </div>
     </div>
 
