增加卡片繞圓

--- a/gsaptrain.html
+++ b/gsaptrain.html
@@ -117,7 +117,7 @@
             </p>
           </div>
           <div class="box2_img">
-            <img src="https://fakeimg.pl/700x600/999/456/?text=IMG" alt="" />
+            <img src="https://fakeimg.pl/700x600/999/456/?text=IMG" alt="img" />
           </div>
         </div>
       </div>
@@ -150,9 +150,15 @@
         </p>
       </div>
       <div class="box4">
-        <p>
-          BOX4
-        </p>
+        <div class="imgs">
+          <div class="img_inner" id="imgRotate">
+            <img class="img1" src="https://fakeimg.pl/200x300/999/456/?text=A" alt="" width="200" height="300">
+            <img class="img2" src="https://fakeimg.pl/200x300/999/456/?text=B" alt="" width="200" height="300">
+            <img class="img3" src="https://fakeimg.pl/200x300/999/456/?text=C" alt="" width="200" height="300">
+            <img class="img4" src="https://fakeimg.pl/200x300/999/456/?text=D" alt="" width="200" height="300">
+            <img class="img5" src="https://fakeimg.pl/200x300/999/456/?text=E" alt="" width="200" height="300">
+          </div>
+        </div>
       </div>
     </div>
 
