--- a/gsaptrain.html
+++ b/gsaptrain.html
@@ -19,11 +19,31 @@
         </a>
         <nav class="nav">
           <ul class="nav_list">
-            <li class="nav_item">work</li>
-            <li class="nav_item">services</li>
-            <li class="nav_item">pricing</li>
-            <li class="nav_item">network</li>
-            <li class="nav_item">start a project</li>
+            <li class="nav_item">
+              <a href="#box1">
+                work
+              </a>
+            </li>
+            <li class="nav_item">
+              <a href="#box2">
+                services
+              </a>
+            </li>
+            <li class="nav_item">
+              <a href="#box3">
+                pricing
+              </a>
+            </li>
+            <li class="nav_item">
+              <a href="#box4">
+                network
+              </a>
+            </li>
+            <li class="nav_item">
+              <a href="#">
+                start a project
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -43,7 +63,7 @@
         <div class="blank_head">TEXT</div>
         <div class="blank_body" id="arrow"></div>
       </div>
-      <div class="box1">
+      <div class="box1" id="box1">
         <h2>ORIGINAL IN DIGITAL</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure
@@ -75,7 +95,7 @@
           </div>
         </div>
       </div>
-      <div class="box2">
+      <div class="box2" id="box2">
         <div class="box2_head">
           <h4>Vivaldis</h4>
           <p>art direction, UX/UI design, visual design</p>
@@ -144,12 +164,12 @@
           </div>
         </div>
       </div>
-      <div class="box3">
+      <div class="box3" id="box3">
         <p>
           BOX3
         </p>
       </div>
-      <div class="box4">
+      <div class="box4" id="box4">
         <div class="imgs">
           <div class="img_inner" id="imgRotate">
             <img class="img1" src="https://fakeimg.pl/200x300/999/456/?text=A" alt="" width="200" height="300">
