--- a/timegap.html
+++ b/timegap.html
@@ -53,9 +53,9 @@
 
     <!-- 文字滑入+陰影效果 -->
     <div class="box">
-      <img src="https://fakeimg.pl/150x150/46A3FF/5B5B5B/?text=TEST" />
+      <img src="https://fakeimg.pl/150x150/46A3FF/5B5B5B/?text=card" />
       <div class="black-bg"></div>
-      <div class="title">Hello</div>
+      <div class="title">description</div>
     </div>
 
     <script>
